welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code


def haveBaggle():Boolean = {
	var vuBiscuit:boolean=false
	for (nbPas <-0 to 6) {
	avance() ;
	if (estSurBiscuit) {
	vuBiscuit=true;
	} 
		return vuBiscuit;
}
}



